user signup form / load static

--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -1,7 +1,8 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'account/style.css' %}" />
     <title>Polyledger</title>
 </head>
 
