--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{% static 'account/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'account/css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'polyledger/css/toolkit-light.min.css' %}" />
     <title>Polyledger</title>
 </head>
 
