--- a/polyledger/account/templates/registration/signup.html
+++ b/polyledger/account/templates/registration/signup.html
@@ -1,21 +1,48 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
-    {% endfor %}
-    <button type="submit">Sign up</button>
-  </form>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-4">
+      <h2 class="text-center">Sign up</h2>
+      <form method="post" action="{% url 'account:signup' %}">
+        {% csrf_token %}
+
+        <div class="form-group">
+          <label id="{{ form.first_name.id_for_label }}">{{ form.first_name.label }}</label>
+          <input class="form-control" type="text" name="{{ form.first_name.html_name }}">
+        </div>
+
+        <div class="form-group">
+          <label id="{{ form.last_name.id_for_label }}">{{ form.last_name.label }}</label>
+          <input class="form-control" type="text" name="{{ form.last_name.html_name }}">
+        </div>
+
+        <div class="form-group">
+          <label id="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+          <input class="form-control" type="email" name="{{ form.email.html_name }}">
+        </div>
+
+        <div class="form-group">
+          <label id="{{ form.password1.id_for_label }}">{{ form.password1.label }}</label>
+          <input class="form-control" type="password" name="{{ form.password1.html_name }}">
+        </div>
+
+        <div class="form-group">
+          <label id="{{ form.password2.id_for_label }}">{{ form.password2.label }}</label>
+          <input class="form-control" type="password" name="{{ form.password2.html_name }}">
+        </div>
+
+        <button type="submit" class="btn btn-primary btn-block">Sign up</button>
+      </form>
+      <small class="form-text text-muted">
+        Already have an account? <a href="{% url 'account:login' %}">Login</a>.
+      </small>
+    </div>
+  </div>
+</div>
+
+<!-- TODO: Show form errors. -->
+
 {% endblock %}
