--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{% static 'account/css/style.css' %}" />
-    <link rel="stylesheet" href="{% static 'polyledger/css/toolkit-light.min.css' %}" />
-    <title>Polyledger</title>
+  <link rel="stylesheet" href="{% static 'account/css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'polyledger/css/toolkit-light.min.css' %}" />
+  <title>Polyledger</title>
 </head>
 
 <body>
-    <div id="content">
-        {% block content %}{% endblock %}
-    </div>
+  <main id="app">
+    {% block content %}{% endblock %}
+  </main>
 </body>
 </html>
