--- a/polyledger/account/templates/account/index.html
+++ b/polyledger/account/templates/account/index.html
@@ -1,1 +1,13 @@
-Hello, world. You are at the account index.
+{% extends 'base.html' %}
+
+{% block content %}
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      Hello, world. You are at the account index.
+    </div>
+  </div>
+</div>
+
+{% endblock %}
