--- a/polyledger/account/templates/registration/login.html
+++ b/polyledger/account/templates/registration/login.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" id="login-container">
   <div class="row justify-content-center">
-    <div class="col-4">
+    <div class="col-md-4">
       <h2 class="text-center">Log in</h2>
       <form method="post" action="{% url 'account:login' %}">
         {% csrf_token %}
