--- a/polyledger/account/templates/registration/signup.html
+++ b/polyledger/account/templates/registration/signup.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" id="signup-container">
   <div class="row justify-content-center">
-    <div class="col-4">
+    <div class="col-md-4">
       <h2 class="text-center">Sign up</h2>
       <form method="post" action="{% url 'account:signup' %}">
         {% csrf_token %}
