--- a/polyledger/account/templates/registration/login.html
+++ b/polyledger/account/templates/registration/login.html
@@ -9,6 +9,10 @@
       <form method="post" action="{% url 'account:login' %}">
         {% csrf_token %}
 
+        <div class="alert alert-danger" role="alert">
+          {{ form.non_field_errors|striptags }}
+        </div>
+
         <div class="form-group">
           <label id="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
           <input class="form-control" type="email" name="{{ form.username.html_name }}">
