--- a/polyledger/account/templates/registration/confirm_account.html
+++ b/polyledger/account/templates/registration/confirm_account.html
@@ -1,1 +1,16 @@
-Please confirm your email address to complete the registration.
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
+<div class="container" id="confirm-account-container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h2 class="text-center">Success!</h2>
+      <p class="lead text-center">An email is on its way. Please confirm your address to complete the registration.</p>
+      <img src="{% static 'account/img/confirmation_email_animation.gif' %}" width="100%">
+    </div>
+  </div>
+</div>
+
+{% endblock %}
