--- a/polyledger/account/templates/registration/login.html
+++ b/polyledger/account/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 <div class="container" id="login-container">
   <div class="row justify-content-center">
-    <div class="col-md-4">
+    <div class="col-md-4 card card-body">
       <h2 class="text-center">Log in</h2>
       <form method="post" action="{% url 'account:login' %}">
         {% csrf_token %}
