--- a/polyledger/account/templates/registration/signup.html
+++ b/polyledger/account/templates/registration/signup.html
@@ -4,7 +4,7 @@
 
 <div class="container" id="signup-container">
   <div class="row justify-content-center">
-    <div class="col-md-4">
+    <div class="col-md-4 card card-body">
       <h2 class="text-center">Sign up</h2>
       <form method="post" action="{% url 'account:signup' %}">
         {% csrf_token %}
