--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -9,6 +9,7 @@
   {% endif %}
   <link rel="stylesheet" href="{% static 'polyledger/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="{% static 'polyledger/css/toolkit-light.min.css' %}" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <title>Polyledger</title>
 </head>
 
