--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="{% static 'polyledger/css/polyledger.css' %}" />
   <link rel="stylesheet" href="{% static 'account/css/account.css' %}" />
   {% if request.path == '/account/login/' or request.path == '/account/signup/' %}
