entypo icons and bootstrap javascript

--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -33,7 +33,7 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/account/logout">Logout</a>
+            <a class="nav-link" href="/account/logout"><i class="icon icon-log-out"></i> Logout</a>
           </li>
         </ul>
       </div>
@@ -45,5 +45,6 @@
   </main>
 
   <script type="text/javascript" src="{% static 'polyledger/js/jquery-3.2.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'polyledger/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
