[bug-fix] use is_verified

--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -20,7 +20,7 @@
     <a class="navbar-brand" href="#">
       <img src="{% static 'polyledger/img/logo.png' %}" height="30" alt="Polyledger">
     </a>
-    {% if user.is_authenticated %}
+    {% if user.is_verified %}
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
