--- a/polyledger/account/static/account/css/account.css
+++ b/polyledger/account/static/account/css/account.css
@@ -2,6 +2,12 @@
   margin-top: 10%;
 }
 
+@media (max-width: 600px) {
+  #login-container, #signup-container, #confirm-account-container {
+    margin-top: 0;
+  }
+}
+
 .navbar-brand > img {
   margin-top: -5px;
 }
