--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -40,6 +40,19 @@
     {% endif %}
   </nav>
 
+  {% if messages %}
+    {% for message in messages %}
+
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-3" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      {{ message }}
+    </div>
+
+    {% endfor %}
+  {% endif %}
+
   <main id="app">
     {% block content %}{% endblock %}
   </main>
