--- a/polyledger/account/static/account/css/account.css
+++ b/polyledger/account/static/account/css/account.css
@@ -1,7 +1,3 @@
-#login-container, #signup-container, #confirm-account-container {
-  margin-top: 10%;
-}
-
 @media (max-width: 600px) {
   #login-container, #signup-container, #confirm-account-container {
     margin-top: 0;
@@ -10,4 +6,13 @@
 
 .navbar-brand > img {
   margin-top: -5px;
+}
+
+.footer {
+  bottom: 0;
+  width: 100%;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
+  background-color: #1A1C22;
+  color: #f5f5f5;
 }
