--- a/polyledger/account/static/account/css/theme.css
+++ b/polyledger/account/static/account/css/theme.css
@@ -1,4 +1,5 @@
-body {
+main#app {
+  height: 100%;
   background: url('/static/account/img/theme.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
