--- a/polyledger/account/templates/registration/confirm_account.html
+++ b/polyledger/account/templates/registration/confirm_account.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container" id="confirm-account-container">
+<div class="container pt-5">
   <div class="row justify-content-center">
     <div class="col-md-6 card card-body">
       <h2 class="text-center">Success!</h2>
