--- a/polyledger/account/templates/registration/signup.html
+++ b/polyledger/account/templates/registration/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container" id="signup-container">
+<div class="container pt-5">
   <div class="row justify-content-center">
     <div class="col-md-4 card card-body">
       <h2 class="text-center">Sign up</h2>
