remove checked attr

--- a/polyledger/account/templates/account/questions.html
+++ b/polyledger/account/templates/account/questions.html
@@ -168,7 +168,7 @@
           <p><strong>The global stock market is often volatile. If your entire investment portfolio lost 10% of its value in a month during a market decline, what would you do?</strong></p>
           <div class="form-check">
             <label class="form-check-label">
-              <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+              <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1">
               Sell all of your investments
             </label>
           </div>
