--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -68,6 +68,11 @@
   </footer>
 
   <script type="text/javascript" src="{% static 'polyledger/js/jquery-3.2.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'polyledger/js/popper.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'polyledger/js/tablesorter.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'polyledger/js/toolkit.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'polyledger/js/application.js' %}"></script>
+  <script type="text/javascript" src="{% static 'polyledger/js/chart.min.js' %}"></script>
 </body>
 </html>
