--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -33,6 +33,9 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link" href="/account/settings">Settings</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/account/logout"><i class="icon icon-log-out"></i> Logout</a>
           </li>
         </ul>
