--- a/polyledger/account/templates/account/index.html
+++ b/polyledger/account/templates/account/index.html
@@ -8,22 +8,37 @@
       <h1>Your account</h1>
     </div>
   </div>
+  <div class="row py-5">
+    <div class="col">
+      <h2 class="statcard-number text-center">$105,655 <small class="badge badge-success">5%</small></h2>
+    </div>
+  </div>
   <div class="row my-5">
-    <div class="col-md-9">
-
+    <div class="col-md-12">
       <div class="hr-divider">
         <ul class="nav nav-pills hr-divider-content hr-divider-nav" role="tablist">
           <li class="nav-item" role="presentation">
-            <a href="#value" class="nav-link active" role="tab" data-toggle="tab" aria-controls="value">Value</a>
+            <a href="#day" class="nav-link active" role="tab" data-toggle="tab" aria-controls="day">1d</a>
           </li>
           <li class="nav-item" role="presentation">
-            <a href="#portfolio" class="nav-link" role="tab" data-toggle="tab" aria-controls="portfolio">Portfolio</a>
+            <a href="#week" class="nav-link" role="tab" data-toggle="tab" aria-controls="week">7d</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a href="#month" class="nav-link" role="tab" data-toggle="tab" aria-controls="month">1m</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a href="#quarter-year" class="nav-link" role="tab" data-toggle="tab" aria-controls="quarter-year">3m</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a href="#half-year" class="nav-link" role="tab" data-toggle="tab" aria-controls="half-year">6m</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a href="#year" class="nav-link" role="tab" data-toggle="tab" aria-controls="year">1y</a>
           </li>
         </ul>
       </div>
-
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="value">
+        <div role="tabpanel" class="tab-pane active" id="day">
           <div class="ex-line-graphs">
              <canvas
               class="ex-line-graph"
@@ -34,39 +49,6 @@
               data-dark="true">
             </canvas>
           </div>
-        </div>
-
-        <div role="tabpanel" class="tab-pane" id="portfolio">
-          <div class="row ex-graphs text-center mt-3">
-            <div class="col-sm-4 ml-auto mr-auto mb-4 mb-sm-0">
-              <div class="w-3 mx-auto">
-                <canvas
-                  class="ex-graph"
-                  width="200" height="200"
-                  data-chart="doughnut"
-                  data-dataset="[230, 130, 50]"
-                  data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#f5922f', '#62698e', '#bebebe'] }"
-                  data-labels="['Bitcoin', 'Ethereum', 'Litecoin']">
-                </canvas>
-              </div>
-              <strong class="text-muted">Portfolio</strong>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <h4>Tasks</h4>
-      <div class="card my-2">
-        <div class="card-body">
-          <p>You still need to fill out the risk questionnaire.</p>
-          <button class="btn btn-success">Start now</button>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <p>You need to verify your status as an accredited investor before you can start investing.</p>
-          <button class="btn btn-success">Verify now</button>
         </div>
       </div>
     </div>
