integrate plaid auth

--- a/polyledger/account/templates/account/settings.html
+++ b/polyledger/account/templates/account/settings.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-  <div class="row mt-5">
+  <div class="row mt-5 mb-5">
     <div class="col">
       <h1>Settings</h1>
       <hr>
@@ -43,6 +43,8 @@
       </div>
       <hr>
       <h3>Connect Bank Account</h3>
+      <p>Connect your bank account if you would like to buy cryptocurrency with USD or would like to liquidate your investments.</p>
+      <button class="btn btn-success" id="link-btn">Link bank account</button>
       <hr>
       <h3>Close Account</h3>
       <p>We're sorry to see you go. This action is non-reversable and permanently closes your account with Polyledger.</p>
