--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -77,5 +77,7 @@
   <script type="text/javascript" src="{% static 'polyledger/js/toolkit.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/application.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/chart.min.js' %}"></script>
+  <script type="text/javascript" src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
+  <script type="text/javascript" src="{% static 'account/js/plaid.js' %}"></script>
 </body>
 </html>
